# SkyHAL

./: .dockerignore  .editorconfig  .env.retireissoaqui  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bandit.toml  pyproject.toml  requirements.txt  test_api.py  testa-ever.ai.rest
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: post-checkout
.github/: copilot-instructions.md  github-copilot-instrucoes-personalizadas-guia.md
.github/chatmodes/: architect.chatmode.md  arquiteto.chatmode.md  backend.chatmode.md  data-scientist.chatmode.md  debugging.chatmode.md  frontend.chatmode.md  memory-agent.chatmode.md  seguranca.chatmode.md  testing.chatmode.md
.github/instructions/: README.md  api-security.instructions.md  base-agent.instructions.md  bugs_founded.instructions.md  code-review.instructions.md  commit-message.instructions.md  copilot-specific.instructions.md  devcontainer-tech-debt.md  documentation.instructions.md  done-ready.instructions.md  global.instructions.md  mcp-integration.instructions.md  memory-bank.instructions.md  memory-usage.instructions.md  observabilidade.instructions.md  pull-request.instructions.md  python-mcp.instructions.md  tech-debt.instructions.md  test-api.instructions.md  test.instructions.md  troubleshooting.instructions.md
.github/issues/: BUG-002.md
.github/prompts/: README.md  api-development.prompt.md  clean-architecture.prompt.md  code-review.prompt.md  context-analysis.prompt.md  database-design.prompt.md  documentation-generation.prompt.md  entity-management.prompt.md  error-handling.prompt.md  experiment-analysis.prompt.md  generate-tests.prompt.md  gerar-testes.prompt.md  knowledge-search.prompt.md  memory-analysis.prompt.md  memory-analytics.prompt.md  memory-bank-update.prompt.md  memory-update.prompt.md  observabilidade.prompt.md  otimizar-performance.prompt.md  performance-optimization.prompt.md  project-planning.prompt.md  refactor-code.prompt.md  regras-gerais.prompt.md  resilience.prompt.md  revisar-seguranca.prompt.md  security-analysis.prompt.md  sequential-planning.prompt.md  task-management.prompt.md  tools.toolsets.jsonc
.github/prompts/mcp-server/: analysis.prompt.md  development.prompt.md  planning.prompt.md  review.prompt.md  testing.prompt.md
.memory/: schema.json
.scripts/: build.ps1  build.sh  demo-observability.py  diagnose-devcontainer.ps1  diagnose-mcp-environment.ps1  diagnose-python-environment.ps1  generate-devcontainer-local.ps1  git-sync.ps1  git-sync.sh  install-mcp-packages.ps1  lint.ps1  lint.sh  memory-bank-status.ps1  memory-bank-status.sh  post-checkout-setup.ps1  setup-mcp-environment.ps1  setup-venv.ps1  start-mcp-servers.ps1  stop-mcp-servers.ps1  test-observability-stack.py  test.ps1  test.sh  validate-observability.py
config/: observability.yaml
config/environments/: development.yaml  production.yaml
docs/: README.md  auto-extensao-mcp.md  bugs_founded.md  build-tasks.md  copilot-instructions-dicas.md  devcontainer-setup.md  development.md  github-copilot-instrucoes-personalizadas-guia.md  llm-codegen.md  onboarding.md  planejamento-llm-codegen.md  prompts-copilot-best-practices.md
docs/analises/: ai-generation.md  v0.1.0-v0.2.0.md  v0.1.0.md
docs/especificacoes-tecnicas/: ADR-011-auto-extensao-mcp.md  auto-extensao-arquitetura.md  issue-10-implementacai.md  issue-10-implementacao.md  issue-10-observabilidade.md  issue-11-auto-extensao-mcp.md  issue-11-implementacao.md  issue-11-pendencias.md  llm-auto-extensao.md  politicas-acesso-seguras.md  rollback-e-quotas.md  salva-expansao.md  sandbox-e-permissoes.md  testes-qualidade.md
docs/especificacoes-tecnicas/artefatos/: auto-extensao-artefatos.md  dependencies-update.md  grafana-setup.md  observability-config.md  observability-docs.md  observability-infrastructure.md  observability-middleware.md  observability-tests.md  observability-validation-20250625.md
docs/observabilidade/: README.md  architecture.md  quickstart.md
docs/observabilidade/configuration/: README.md
docs/observabilidade/examples/: code-instrumentation.md  custom-metrics.md  log-correlation.md
docs/observabilidade/usage/: developers.md  troubleshooting.md
docs/tech-debt/: devcontainer-tech-debt.md
infra/: README.md
infra/grafana/: docker-compose.yml
infra/grafana/config/: grafana.ini
infra/grafana/loki/: loki-config.yml
infra/grafana/otel/: otel-collector-config.yml
infra/grafana/prometheus/: prometheus.yml
infra/grafana/promtail/: promtail-config.yml
infra/grafana/scripts/: setup.ps1  setup.sh
memory-bank/: README.md  activeContext.md  planejamento-mvp.md  progress-devcontainer-linux.md  progress.md
notebooks/: testes_skyhal_api.ipynb
src/: README.md
src/application/: README.md  __init__.py  expansion_manager.py  llm_code_orchestrator.py
src/domain/: README.md  __init__.py
src/infrastructure/: README.md  __init__.py  llm_client.py  llm_client_myai.py
src/presentation/: README.md  __init__.py
src/utils/: secrets.py  test_helpers.py  tool_registry.py  tool_validation.py
tests/: README.md  conftest.py  test_scripts_onboarding.ps1
tests/integration/: jwt_test_utils.py  test_auto_extension_api.py  test_health_check.py  test_llm_codegen.py
tests/unit/: test_base_entity.py  test_expansion_manager.py  test_llm_client.py  test_llm_client_myai.py
(+45 files in other folders)
